01_installation_dashboard/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: installation-dashboard
  namespace: workload-portability-build
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: installation-dashboard-tls
spec:
  selector:
    app: installation-dashboard
  ports:
    - name: proxy
      port: 8443
      targetPort: 8443
