01_installation_dashboard/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: installation-dashboard
  namespace: workload-portability-build
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: installation-dashboard
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
